Se arreglaron errores